# banax

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  LICENSE.md  README.md  pyproject.toml
.github/workflows/: publish.yml
src/banax/: __init__.py  _core.py  adjoint.py  regularization.py  solver.py  utils.py
tests/: conftest.py  test_adjoints.py  test_regularization.py  test_solvers.py
