[project]
name = "banax"
version = "0.1.0"
description = "Deep equilibrium models in JAX/Equinox"
readme = "README.md"
authors = [
    { name = "Patrick Lambein", email = "patrick.lambein@rhizome-labs.com" }
]
requires-python = ">=3.12"
dependencies = [
    "equinox>=0.13.3",
    "jax>=0.8.1",
    "jaxtyping>=0.3.3",
]

[build-system]
requires = ["uv_build>=0.9.29,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "ruff>=0.15.7",
    "ty>=0.0.24",
]

[tool.ruff.lint]
ignore = ["F722"]

[tool.ruff.lint.per-file-ignores]
"tests/conftest.py" = ["E402"]
