[project]
name = "banax"
version = "0.1.5"
description = "Deep equilibrium models in JAX/Equinox"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE.md"]
authors = [
    { name = "Patrick Lambein", email = "patrick.lambein@rhizome-labs.com" }
]
requires-python = ">=3.12"
dependencies = [
    "equinox>=0.13.3",
    "jax>=0.8.1",
    "jaxtyping>=0.3.3",
]
keywords = [
    "jax",
    "equinox",
    "deep-equilibrium",
    "deq",
    "fixed-point",
    "implicit-differentiation",
    "implicit-layers",
    "deep-learning",
    "neural-networks",
    "machine-learning",
    "differentiable-programming",
    "scientific-computing",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/RhizomeResearch/banax"
Repository = "https://github.com/RhizomeResearch/banax"
Issues = "https://github.com/RhizomeResearch/banax/issues"

[build-system]
requires = ["uv_build>=0.10.10,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "ruff>=0.15.7",
    "ty>=0.0.24",
]

[tool.ruff.lint]
ignore = ["F722"]

[tool.ruff.lint.per-file-ignores]
"tests/conftest.py" = ["E402"]
